# discworld-demo

./: README.md  main.py  pyproject.toml  requirements.txt
api/: DiscworldClient.py
models/: discworld.py  views.py
schemas/: discworld.yaml
utils/: get_model.py  url_to_query_string.py
views/: dict.py  pagination.py  person_detail.py  person_list.py
