[project]
name = "discworld-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]==0.136.1",
]

[dependency-groups]
dev = [
    "datamodel-code-generator==0.56.1",
    "ruff==0.15.12",
]

[tool.datamodel-codegen]
input = "schemas/discworld.yaml"
input-file-type = "openapi"
output = "models/discworld.py"
output-model-type = "pydantic_v2.BaseModel"
use-operation-id-as-name = true
openapi-scopes = ["schemas", "parameters", "paths"]
